--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,6 +64,7 @@
     --secondary-foreground: 210 40% 98%;
 
     --secondary-light-stell-blue: 210 22% 48%;
+    --secondary-light-stell-blue-hover: 210 22% 80%;
     --secondary-light-stell-blue-foreground: 0 0% 100%;
 
     --secondary-medium-seagreen: 174, 45%, 43%;
